Цвета кнопок оплаты

--- a/wa-plugins/payment/invoicejur/templates/payment.html
+++ b/wa-plugins/payment/invoicejur/templates/payment.html
@@ -1,5 +1,5 @@
 <form action="" method="POST" target="_blank">
     {$wa->csrf()}
-    <input type="submit" value="Распечатать счет на оплату">
+    <input style="background-color: #16bdb3" type="submit" value="Распечатать счет на оплату">
     <input type="hidden" name="printform" value="1">
 </form>
