--- a/wa-plugins/payment/sberbank/templates/payment.html
+++ b/wa-plugins/payment/sberbank/templates/payment.html
@@ -3,5 +3,5 @@
     {foreach $fields as $name => $value}
         <input type="hidden" name="{$name}" value="{$value|escape}">
     {/foreach}
-    <input type="submit" value="Оплатить на сайте Сбербанка">
+    <input style="background-color: #16bdb3" type="submit" value="Оплатить">
 </form>
