--- a/wa-apps/shop/plugins/yandexmarket/templates/actions/settings/SettingsCampaign.html
+++ b/wa-apps/shop/plugins/yandexmarket/templates/actions/settings/SettingsCampaign.html
@@ -1,5 +1,12 @@
+<style>
+    td.ui-datepicker-holiday span {
+        background-color: #FCC !important;
+    }
+    td a.ui-state-active {
+        background-color: white !important;
+    }
+</style>
 {$settings_url='#/yandexmarket/'}
-
 <h1 class="js-bread-crumbs">{$campaign_id|string_format:'Настройки кампании №%s (Заказ на Маркете)'|escape}</h1>
 
 {if empty($cpa_available)}
@@ -11,15 +18,13 @@
 {elseif empty($api_available)}
 
     {include file="../../includes/api.error.html"
-        message='Для приема заказов через API заполните секции «OAuth-приложение» и «Заказ на Маркете» в
-<a href="?action=plugins#/yandexmarket/main/">основных настройках плагина</a>.'
+        message='Для приема заказов через API заполните секции «OAuth-приложение» и «Заказ на Маркете» в <a href="?action=plugins#/yandexmarket/main/">основных настройках плагина</a>.'
         hint='Обработка заказов возможна вручную в партнерском интерфейсе «Яндекс.Маркета» или автоматически через <a href="?action=plugins#/yandexmarket/api/">API</a>.'}
 
 {elseif !empty($error)}
 
     {include file="../../includes/api.error.html"
-        message='Для отображения настроек кампании настройте <a href="?action=plugins#/yandexmarket/api/">авторизацию партнерского API</a>
-и проверьте настройки кампании в личном кабинете «Яндекс.Маркета».'}
+        message='Для отображения настроек кампании настройте <a href="?action=plugins#/yandexmarket/api/">авторизацию партнерского API</a> и проверьте настройки кампании в личном кабинете «Яндекс.Маркета».'}
 
 {else}
 
@@ -232,9 +237,25 @@
                         </div>
                     </div>
 
+                    {if !empty($campaign_settings.localRegion.delivery.schedule)}
+
+                    <div class="field">
+                        {$_schedule = $campaign_settings.localRegion.delivery.schedule}
+                        <div class="name">График работы</div>
+                        <div class="value"><div class="js-holidays" data-holidays="{$_schedule.totalHolidays|json_encode|escape}" data-from="{$_schedule.period.fromDate|escape}" data-to="{$_schedule.period.toDate|escape}"></div> </div>
+                        <div class="value hint">
+                            <i class="icon16 info"></i>Показаны данные для периода с {$_schedule.period.fromDate|wa_datetime:'humandate'} по {$_schedule.period.toDate|wa_datetime:'humandate'} из настроек графика работы в кабинете «Яндекс.Маркета».
+                        </div>
+                        <div class="value hint">
+                            <i class="icon16 exclamation"></i>Список выходных и рабочих дней редактируется в настройках кампании в личном кабинете «Яндекс.Маркета».
+                            Данные на этой странице обновляются раз в сутки.<br>
+                            После изменения графика работы в кабинете «Яндекс.Маркета» проверьте правильность отображения графика на этой странице. Если данные не обновились, очистите кеш в «<a href="{$wa_backend_url}installer/?module=settings">Инсталлере</a>».
+                        </div>
+                    </div>
+                    {/if}
                     <div class="field">
                         <div class="name">
-                            Время приема заказа
+                            Дни и время приема и доставки заказов
                         </div>
                         <div class="value no-shift">
                             <label><input type="radio" name="campaign[order_before_mode]"
@@ -253,20 +274,28 @@
 
                         {$_week_days = ['понедельник', 'вторник', 'среда', 'четверг', 'пятница', 'суббота', 'воскресенье']}
                         {foreach $_week_days as $_day => $_name}
-                            <div class="value js-delivery-time-options">
+                            <div class="value js-delivery-time-options{if !empty($_schedule.weeklyHolidays) && in_array($_day+1,$_schedule.weeklyHolidays)} grey{/if}">
                                 <input type="text" placeholder="17" class="numerical short" size="2"
                                    name="campaign[order_before_per_day][{$_day}][before]"
                                    value="{$campaign.order_before_per_day[$_day]|default:$campaign.order_before|default:24|escape}"
                                 >&nbsp;<label>
                                     <input type="checkbox" name="campaign[order_before_per_day][{$_day}][workday]" value="1"
+
                                         {if !empty($campaign.order_before_per_day[$_day])} checked="checked"{/if}>&nbsp;{$_name|escape}
                                 </label>
                             </div>
                         {/foreach}
                         <div class="value">
-                            <span class="hint">Время оформления заказа (только часы), до наступления которого действуют указанные сроки и условия доставки и для точек продаж
-справочника «Яндекс.Маркета», и для всех видов доставки Shop-Script.
-                                <br/><i class="icon10 exclamation"></i>Настройки должны соответствовать настройкам в кабинете «Яндекс.Маркета», чтобы не возникло ошибок по качеству.</span>
+                            <span class="hint">
+                                Дни и время приема и доставки заказов. Серым цветом в списке дней недели отмечены еженедельные нерабочие дни.<br>
+                                Указанные сроки и условия доставки действуют до наступления указанного времени только в выбранные дни. Это правило относится и к точкам продаж
+                                справочника «Яндекс.Маркета», и ко всем видам доставки Shop-Script.<br>
+                                
+                                Время и день приема заказа игнорируются, если этот день в кабинете «Яндекс.Маркета» отмечен как <em>нерабочий</em>.
+                                Такой день можно не отключать на этой странице — ошибок по качеству не возникнет.<br>
+                                
+                                <i class="icon10 exclamation"></i>Другие настройки должны соответствовать настройкам в кабинете «Яндекс.Маркета», чтобы не возникло ошибок по качеству.
+                            </span>
                         </div>
                     </div>
 
@@ -405,6 +434,15 @@
                     </div>
                 </div>
                 {$wa->csrf()}
+{*
+                <div class="field-group">
+                    <div class="field">
+                        <div class="value">
+                            <pre>{$campaign_data|default:'-'|var_export:true|escape}</pre>
+                        </div>
+                    </div>
+                </div>
+*}
         </form>
     </div>
 {/if}
@@ -443,7 +481,7 @@
         var checkPayments = function ($method, event) {
             var valid = false;
             var type = $method.find(':input[name$="\\[type\\]"]').val();
-            if (payment.yandex && (type != 'POST')) {
+            if (payment.yandex && (type !== 'POST')) {
                 valid = true;
             } else {
                 var $cash = $method.find(':input[type="checkbox"][name$="\\[cash\\]"]');
@@ -452,20 +490,20 @@
 
 
                 valid = (
-                        (payment.cash && (!$cash.length || $cash.attr('checked')))
-                        ||
-                        (payment.card && (!$card.length || $card.attr('checked')))
-                        ||
-                        (payment.yandex && (!$yandex.length || (type != 'POST') || !$yandex.attr('checked')))
+                    (payment.cash && (!$cash.length || $cash.attr('checked')))
+                    ||
+                    (payment.card && (!$card.length || $card.attr('checked')))
+                    ||
+                    (payment.yandex && (!$yandex.length || (type !== 'POST') || !$yandex.attr('checked')))
                 );
             }
             toggle($method.find('.js-validate-payment'), event, !valid);
         };
 
 
-        $form.find('input[name$="\\[before\\]"], input[name$="\\[order_before\\]"]').bind('change, keyup',function(){
-            var value = this.value.replace(/\D+/,'');
-            this.value = (value=='')?value:Math.max(1,Math.min(24,parseInt(value)));
+        $form.find('input[name$="\\[before\\]"], input[name$="\\[order_before\\]"]').bind('change, keyup', function () {
+            var value = this.value.replace(/\D+/, '');
+            this.value = (value === '') ? value : Math.max(1, Math.min(24, parseInt(value)));
         });
 
         $form.find('input[name$="\\[estimate_over_sell\\]"], input[name$="\\[estimate\\]"], input[name$="\\[estimate_ext\\]"]').bind('change, keyup', function () {
@@ -505,17 +543,50 @@
         /**
          * delivery mode control
          */
-        $form.find(':input[name="campaign\\[order_before_mode\\]"]').change(function (event) {
+        $form.find(':input[name$="\\[order_before_mode\\]"]').change(function (event) {
             /**
              * @this HTMLInputElement
              */
-            var checked = this.checked;
-            if (this.value == 'generic') {
-                checked = !checked;
+            var show_generic = false;
+            var show_options = false;
+            if (this.checked) {
+                switch (this.value) {
+                    case 'generic':
+                        show_generic = true;
+                        break;
+                    case'per-day':
+                        show_options = true;
+                        break;
+                }
             }
-            toggle($form.find('div.js-delivery-time-generic-options'), event, !checked);
-            toggle($form.find('div.js-delivery-time-options'), event, checked);
+
+            var $scope = $(this).parents('div.field:first');
+            toggle($scope.find('div.js-delivery-time-generic-options'), event, show_generic);
+            toggle($scope.find('div.js-delivery-time-options'), event, show_options);
         }).change();
+
+
+        var $holidays = $form.find('div.js-holidays');
+
+        var holidays = $holidays.data('holidays');
+
+        $holidays.datepicker();
+        $holidays.datepicker("option", {
+            "dateFormat": 'dd-mm-yy',
+            'minDate': $holidays.data('from'),
+            'maxDate': $holidays.data('to'),
+            'numberOfMonths':2,
+                beforeShowDay: function (date) {
+                    if (holidays && holidays.length) {
+                        var string_date = $.datepicker.formatDate('dd-mm-yy', date);
+                        var holiday = holidays.indexOf(string_date) !== -1;
+                        return [!holiday, holiday ? 'ui-datepicker-holiday' : null];
+                    } else {
+                        return [true];
+                    }
+                }
+            });
+            $('.ui-datepicker').css('zIndex', 999999);
 
         /**
          * delivery method control
@@ -555,8 +626,8 @@
             /**
              * @this HTMLInputElement
              */
-            payment['card'] = (this.value != '');
-            toggle($form.find('div.js-payment-card'), event, (this.value != ''));
+            payment['card'] = (this.value !== '');
+            toggle($form.find('div.js-payment-card'), event, (this.value !== ''));
             checkPayments($(this).parents('div.field-group:first'), event);
             $form.find('div.js-shipping-method').each(function () {
                 checkPayments($(this), event);
@@ -582,14 +653,14 @@
              * @this HTMLInputElement
              */
             var $scope = $(this).parents('div.js-shipping-method');
-            toggle($scope.find('div.js-payment-yandex'), event, payment.yandex && (this.value == 'POST'));
+            toggle($scope.find('div.js-payment-yandex'), event, payment.yandex && (this.value === 'POST'));
             checkPayments($scope, event);
         }).change();
 
         /**
          * delivery time control
          */
-        $form.find(':input[name^="campaign\\[order_before_per_day\\]"][name$="\\[workday\\]"]').change(function (event) {
+        $form.find(':input[name*="\\[order_before_per_day\\]"][name$="\\[workday\\]"]').change(function (event) {
             /**
              * @this HTMLInputElement
              */
@@ -651,7 +722,7 @@
                 iframe: true,
                 dataType: 'json',
                 success: function (data, textStatus, jqXHR) {
-                    if (data && (data.status == 'ok')) {
+                    if (data && (data.status === 'ok')) {
                         var message = '[s`Saved`]';
                         if (data.data && data.data.message) {
                             message = data.data.message;
